deployments/local/service.yml
apiVersion: v1
kind: Service
metadata:
  name: person-api
spec:
  type: ClusterIP
  selector:
    app: person-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
