deployments/local/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: person-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/person
            backend:
              serviceName: person-api
              servicePort: 8080
